--- a/index.html
+++ b/index.html
@@ -2,143 +2,145 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>فرم سفارش ماگ</title>
   <style>
-    body { font-family: sans-serif; direction: rtl; margin: 40px; background: #f9f9f9; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; background: #fff; }
-    th, td { border: 1px solid #ccc; padding: 10px; text-align: center; }
-    input[type="number"] { width: 60px; }
-    tfoot td { font-weight: bold; background: #eee; }
-    label { display: block; margin: 10px 0; }
-    input[type="text"], input[type="tel"] { padding: 5px; width: 250px; }
-    button { padding: 10px 20px; font-size: 16px; margin-top: 15px; cursor: pointer; }
+    body { font-family: sans-serif; direction: rtl; padding: 20px; background: #f5f5f5; }
+    h2 { text-align: center; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 20px; background: white; }
+    th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
+    input[type="number"], input[type="text"] { width: 100%; padding: 5px; box-sizing: border-box; }
+    .summary, .payment, .whatsapp { background: #fff; padding: 15px; border-radius: 8px; margin-top: 15px; }
+    .btn { padding: 10px 20px; margin-top: 10px; cursor: pointer; border: none; border-radius: 5px; }
+    .btn-clear { background: #e74c3c; color: white; }
+    .btn-send { background: #2ecc71; color: white; }
   </style>
 </head>
 <body>
+  <h2>فرم سفارش ماگ</h2>
 
-<h2>فرم سفارش ماگ</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>نام محصول</th>
+        <th>قیمت (تومان)</th>
+        <th>تعداد</th>
+        <th>جمع ردیف</th>
+      </tr>
+    </thead>
+    <tbody id="product-table">
+      <tr>
+        <td>ماگ شیار دار - آبی</td>
+        <td>125000</td>
+        <td><input type="number" min="0" value="0" onchange="updateTotal()"></td>
+        <td class="row-total">0</td>
+      </tr>
+      <tr>
+        <td>ماگ شیار دار - زرد</td>
+        <td>125000</td>
+        <td><input type="number" min="0" value="0" onchange="updateTotal()"></td>
+        <td class="row-total">0</td>
+      </tr>
+      <tr>
+        <td>ماگ شیار دار - قرمز</td>
+        <td>125000</td>
+        <td><input type="number" min="0" value="0" onchange="updateTotal()"></td>
+        <td class="row-total">0</td>
+      </tr>
+      <tr>
+        <td>ماگ لاستر - زرشکی</td>
+        <td>175000</td>
+        <td><input type="number" min="0" value="0" onchange="updateTotal()"></td>
+        <td class="row-total">0</td>
+      </tr>
+      <tr>
+        <td>ماگ لاستر - سورمه‌ای</td>
+        <td>175000</td>
+        <td><input type="number" min="0" value="0" onchange="updateTotal()"></td>
+        <td class="row-total">0</td>
+      </tr>
+    </tbody>
+  </table>
 
-<table id="orderTable">
-  <thead>
-    <tr>
-      <th>نام محصول</th>
-      <th>قیمت (تومان)</th>
-      <th>تعداد</th>
-      <th>جمع کل هر ردیف</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>ماگ شیار دار - آبی</td>
-      <td>125000</td>
-      <td><input type="number" min="0" oninput="updateRow(this)"></td>
-      <td class="totalCell">0</td>
-    </tr>
-    <tr>
-      <td>ماگ شیار دار - زرد</td>
-      <td>125000</td>
-      <td><input type="number" min="0" oninput="updateRow(this)"></td>
-      <td class="totalCell">0</td>
-    </tr>
-    <tr>
-      <td>ماگ شیار دار - قرمز</td>
-      <td>125000</td>
-      <td><input type="number" min="0" oninput="updateRow(this)"></td>
-      <td class="totalCell">0</td>
-    </tr>
-    <tr>
-      <td>ماگ لاستر - زرشکی</td>
-      <td>175000</td>
-      <td><input type="number" min="0" oninput="updateRow(this)"></td>
-      <td class="totalCell">0</td>
-    </tr>
-    <tr>
-      <td>ماگ لاستر - سورمه‌ای</td>
-      <td>175000</td>
-      <td><input type="number" min="0" oninput="updateRow(this)"></td>
-      <td class="totalCell">0</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td colspan="3">جمع کل نهایی:</td>
-      <td id="grandTotal">0</td>
-    </tr>
-  </tfoot>
-</table>
+  <div class="summary">
+    <strong>جمع کل بدون تخفیف:</strong> <span id="raw-total">0</span> تومان<br>
+    <strong>تخفیف:</strong> <span id="discount-amount">0</span> تومان<br>
+    <strong>مبلغ نهایی قابل پرداخت:</strong> <span id="final-total">0</span> تومان
+  </div>
 
-<h3>اطلاعات مشتری</h3>
-<label>نام و نام خانوادگی: <input id="customerName" type="text" required></label>
-<label>شماره تماس: <input id="customerPhone" type="tel" required></label>
+  <div class="payment">
+    <strong>لطفاً مبلغ را به کارت زیر واریز نمایید:</strong><br>
+    <p>💳 6054-3211-1354-8915 - به نام ترگل</p>
+  </div>
 
-<button onclick="submitOrder()">ارسال سفارش</button>
-<p id="statusMsg"></p>
+  <div class="address">
+    <label>📍 آدرس ارسال:</label>
+    <input type="text" id="address" placeholder="مثلاً: تهران، بلوار…">
+  </div>
 
-<script>
-  function updateRow(input) {
-    const row = input.closest('tr');
-    const price = parseInt(row.children[1].textContent);
-    const qty = parseInt(input.value) || 0;
-    const total = price * qty;
-    row.querySelector('.totalCell').textContent = total.toLocaleString();
-    updateGrandTotal();
-  }
+  <div class="whatsapp">
+    <button class="btn btn-send" onclick="sendToWhatsApp()">ارسال سفارش در واتساپ</button>
+    <button class="btn btn-clear" onclick="clearForm()">پاک کردن فرم</button>
+  </div>
 
-  function updateGrandTotal() {
-    const totalCells = document.querySelectorAll('.totalCell');
-    let grandTotal = 0;
-    totalCells.forEach(cell => {
-      grandTotal += parseInt(cell.textContent.replace(/,/g, '')) || 0;
-    });
-    document.getElementById('grandTotal').textContent = grandTotal.toLocaleString();
-  }
+  <script>
+    function updateTotal() {
+      const rows = document.querySelectorAll("#product-table tr");
+      let rawTotal = 0;
+      rows.forEach(row => {
+        const price = parseInt(row.cells[1].textContent);
+        const qty = parseInt(row.cells[2].querySelector("input").value) || 0;
+        const rowTotal = price * qty;
+        row.cells[3].textContent = rowTotal;
+        rawTotal += rowTotal;
+      });
 
-  function submitOrder() {
-    const name = document.getElementById("customerName").value.trim();
-    const phone = document.getElementById("customerPhone").value.trim();
+      let discount = 0;
+      if (rawTotal >= 5000000) {
+        discount = rawTotal * 0.2;
+      } else if (rawTotal >= 3000000) {
+        discount = rawTotal * 0.1;
+      }
+      const finalTotal = rawTotal - discount;
 
-    if (!name || !phone) {
-      alert("لطفاً نام و شماره تماس را وارد کنید.");
-      return;
+      document.getElementById("raw-total").textContent = rawTotal.toLocaleString();
+      document.getElementById("discount-amount").textContent = discount.toLocaleString();
+      document.getElementById("final-total").textContent = finalTotal.toLocaleString();
     }
 
-    const rows = document.querySelectorAll("#orderTable tbody tr");
-    let productList = [];
-    let total = 0;
+    function clearForm() {
+      document.querySelectorAll("#product-table input").forEach(input => input.value = 0);
+      document.getElementById("address").value = "";
+      updateTotal();
+    }
 
-    rows.forEach(row => {
-      const product = row.children[0].textContent;
-      const price = parseInt(row.children[1].textContent);
-      const qty = parseInt(row.querySelector("input").value) || 0;
-      if (qty > 0) {
-        const rowTotal = price * qty;
-        productList.push(`${product} × ${qty} = ${rowTotal.toLocaleString()} تومان`);
-        total += rowTotal;
-      }
-    });
+    function sendToWhatsApp() {
+      const rows = document.querySelectorAll("#product-table tr");
+      let message = "سفارش ماگ:\n";
+      rows.forEach(row => {
+        const name = row.cells[0].textContent;
+        const qty = parseInt(row.cells[2].querySelector("input").value);
+        if (qty > 0) {
+          message += `- ${name}: ${qty} عدد\n`;
+        }
+      });
 
-    const data = {
-      name: name,
-      phone: phone,
-      productList: productList.join("\n"),
-      total: total
-    };
+      const raw = document.getElementById("raw-total").textContent;
+      const discount = document.getElementById("discount-amount").textContent;
+      const final = document.getElementById("final-total").textContent;
+      const address = document.getElementById("address").value;
 
-    fetch("https://script.google.com/macros/s/AKfycbylL9dfPbQwA0vILI1IJwDtE5RE75pHR7qutYW75dXDJ4ts2k7Kpzi_SWBdc_SG1Rw/exec", {
-      method: "POST",
-      body: JSON.stringify(data),
-    }).then(res => {
-      if (res.ok) {
-        alert("✅ سفارش شما با موفقیت ثبت شد!");
-        document.querySelector("form")?.reset();
-      } else {
-        alert("❌ خطا در ثبت سفارش. لطفاً دوباره تلاش کنید.");
-      }
-    }).catch(err => {
-      alert("⚠️ اتصال برقرار نشد: " + err);
-    });
-  }
-</script>
+      message += `\nجمع کل: ${raw} تومان`;
+      if (discount !== "0") message += `\nتخفیف: ${discount} تومان`;
+      message += `\nمبلغ قابل پرداخت: ${final} تومان`;
+      message += `\nآدرس ارسال: ${address}`;
 
+      const phone = "09124323466";
+      const url = `https://wa.me/98${phone.slice(1)}?text=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
+    }
+
+    updateTotal();
+  </script>
 </body>
 </html>
