--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <h2>فرم سفارش ماگ</h2>
 <div style="text-align: left; margin-bottom: 10px;">
-  <img src=./Perlapots_Logotype-05.jpg?text=لوگو" alt="لوگو" style="height: 50px;">
+  <img src=./Perlapots_Logotype-05.jpg" alt="لوگو" style="height: 50px;">
 </div>
 
   
