--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>فرم سفارش ماگ</title>
+  <title>فرم سفارش محصولات PERLA POTS</title>
   <style>
     body { font-family: sans-serif; direction: rtl; padding: 20px; background: #f5f5f5; }
     h2 { text-align: center; }
