--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <h2>فرم سفارش ماگ</h2>
+  <h2>فرم سفارش محصولات PERLA POTS</h2>
 <div style="text-align: left; margin-bottom: 10px;">
   <img src=./Perlapots_Logotype-05.jpg" alt="لوگو" style="height: 50px;">
 </div>
