--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
 
     <div class="payment">
       <strong>لطفاً مبلغ را به کارت زیر واریز نمایید:</strong><br>
-      <p>💳 6054-3211-1354-8915 - به نام ترگل</p>
+      <p>🏦 بانک ملی به نام نیماحکیمی</p>
+      <p>💳 6054-3211-1354-8915</p>
+      <p>💳 6054-3211-1354-8915</p>
     </div>
 
     <div class="address">
-      <label>📍 آدرس ارسال:</label>
+      <label>📮 آدرس ارسال:</label>
       <input type="text" id="address" name="address" required placeholder="مثلاً: تهران، بلوار…">
     </div>
 
