--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
+  <title>فرم سفارش ماگ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>فرم سفارش محصولات PERLA POTS</title>
   <style>
-    body { font-family: sans-serif; direction: rtl; padding: 20px; background: #f5f5f5; }
+    body { font-family: sans-serif; direction: rtl; background: #f5f5f5; padding: 20px; }
     h2 { text-align: center; }
     table { width: 100%; border-collapse: collapse; margin-bottom: 20px; background: white; }
     th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
@@ -14,15 +14,17 @@
     .btn { padding: 10px 20px; margin-top: 10px; cursor: pointer; border: none; border-radius: 5px; }
     .btn-clear { background: #e74c3c; color: white; }
     .btn-send { background: #2ecc71; color: white; }
+    .logo { text-align: left; margin-bottom: 10px; }
   </style>
 </head>
 <body>
-  <h2>فرم سفارش محصولات PERLA POTS</h2>
-<div style="text-align: left; margin-bottom: 10px;">
-  <img src="https://github.com/targol/Order-Form/blob/main/Perlapots_Logotype-05.jpg" alt="لوگو" style="height: 50px;">
-</div>
 
-  
+  <div class="logo">
+    <img src="https://via.placeholder.com/100x50.png?text=لوگو" alt="لوگو" style="height: 50px;">
+  </div>
+
+  <h2>فرم سفارش ماگ</h2>
+
   <form id="order-form" onsubmit="submitForm(event)">
     <table>
       <thead>
@@ -34,36 +36,11 @@
         </tr>
       </thead>
       <tbody id="product-table">
-        <tr>
-          <td>ماگ شیار دار - آبی</td>
-          <td>125000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ شیار دار - زرد</td>
-          <td>125000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ شیار دار - قرمز</td>
-          <td>125000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ لاستر - زرشکی</td>
-          <td>175000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ لاستر - سورمه‌ای</td>
-          <td>175000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td>
-          <td class="row-total">0</td>
-        </tr>
+        <tr><td>ماگ شیار دار - آبی</td><td>125000</td><td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td><td class="row-total">0</td></tr>
+        <tr><td>ماگ شیار دار - زرد</td><td>125000</td><td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td><td class="row-total">0</td></tr>
+        <tr><td>ماگ شیار دار - قرمز</td><td>125000</td><td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td><td class="row-total">0</td></tr>
+        <tr><td>ماگ لاستر - زرشکی</td><td>175000</td><td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td><td class="row-total">0</td></tr>
+        <tr><td>ماگ لاستر - سورمه‌ای</td><td>175000</td><td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()"></td><td class="row-total">0</td></tr>
       </tbody>
     </table>
 
@@ -74,14 +51,17 @@
     </div>
 
     <div class="payment">
-      <strong>لطفاً مبلغ را به کارت زیر واریز نمایید:</strong><br>
-      <p>🏦 بانک ملی به نام نیماحکیمی</p>
-      <p>💳 6054-3211-1354-8915</p>
-      <p>💳 6054-3211-1354-8915</p>
+      <strong>💳 لطفاً مبلغ را به کارت زیر واریز نمایید:</strong><br>
+      <p>6054-3211-1354-8915 - به نام نیما حکیمی</p>
+    </div>
+
+    <div class="fullname">
+      <label>👤 نام و نام خانوادگی:</label>
+      <input type="text" id="fullname" name="fullname" required placeholder="مثلاً: نیما حکیمی">
     </div>
 
     <div class="address">
-      <label>📮 آدرس ارسال:</label>
+      <label>📍 آدرس ارسال:</label>
       <input type="text" id="address" name="address" required placeholder="مثلاً: تهران، بلوار…">
     </div>
 
@@ -123,6 +103,7 @@
     function clearForm() {
       document.querySelectorAll("#product-table input").forEach(input => input.value = 0);
       document.getElementById("address").value = "";
+      document.getElementById("fullname").value = "";
       document.getElementById("send-whatsapp").checked = false;
       updateTotal();
     }
@@ -142,8 +123,10 @@
       const discount = document.getElementById("discount-amount").textContent;
       const final = document.getElementById("final-total").textContent;
       const address = document.getElementById("address").value;
+      const fullname = document.getElementById("fullname").value;
 
       const formData = new FormData();
+      formData.append("نام و نام خانوادگی", fullname);
       formData.append("محصولات", order.join(" | "));
       formData.append("جمع کل", raw);
       formData.append("تخفیف", discount);
@@ -152,19 +135,20 @@
 
       fetch(scriptURL, { method: 'POST', body: formData })
         .then(() => {
-          if (document.getElementById("send-whatsapp").checked) sendToWhatsApp(order, raw, discount, final, address);
-          else alert("سفارش با موفقیت ثبت شد ✅");
+          if (document.getElementById("send-whatsapp").checked)
+            sendToWhatsApp(fullname, order, raw, discount, final, address);
+          else
+            alert("سفارش با موفقیت ثبت شد ✅");
         })
-        .catch(err => alert("خطا در ثبت سفارش ❌"));
+        .catch(() => alert("❌ خطا در ثبت سفارش"));
     }
 
-    function sendToWhatsApp(order, raw, discount, final, address) {
-      let message = "سفارش ماگ:\n" + order.map(x => "- " + x).join("\n");
+    function sendToWhatsApp(fullname, order, raw, discount, final, address) {
+      let message = `👤 نام: ${fullname}\nسفارش ماگ:\n` + order.map(x => "- " + x).join("\n");
       message += `\n\nجمع کل: ${raw} تومان`;
       if (discount !== "0") message += `\nتخفیف: ${discount} تومان`;
       message += `\nمبلغ قابل پرداخت: ${final} تومان`;
       message += `\nآدرس ارسال: ${address}`;
-
       const phone = "09361189022";
       const url = `https://wa.me/98${phone.slice(1)}?text=${encodeURIComponent(message)}`;
       window.open(url, '_blank');
