--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>فرم سفارش از PerlaPots</title>
   <style>
-    body { font-family: sans-serif; direction: rtl; padding: 20px; background: #f5f5f5; }
+    body { font-family: calibri; direction: rtl; padding: 20px; background: #f5f5f5; }
     h2 { text-align: center; }
     table { width: 100%; border-collapse: collapse; margin-bottom: 20px; background: white; }
     th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
@@ -63,6 +63,12 @@
           <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
           <td class="row-total">0</td>
         </tr>
+        <tr>
+          <td>فنجان لاستر - سورمه‌ای</td>
+          <td>175000</td>
+          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
+          <td class="row-total">0</td>
+        </tr>
       </tbody>
     </table>
 
@@ -74,7 +80,7 @@
 
     <div class="payment">
       <strong>لطفاً مبلغ را به کارت زیر واریز نمایید:</strong><br />
-      <p>💳 6054-3211-1354-8915 - به نام ترگل</p>
+      <p>💳 6054-3211-1354-8915 - به نام نیما حمکیمی</p>
     </div>
 
     <form id="order-form" onsubmit="submitForm(event)">
