--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <h2>فرم سفارش از PerlaPots</h2>
 <div style="text-align: left; margin-bottom: 10px;">
-  <img src="https://github.com/targol/Order-Form/blob/main/Perlapots_Logotype-05.jpg" alt="لوگو" style="height: 50px;">
+  <img src="./Perlapots_Logotype-05.jpg" alt="لوگو" style="height: 50px;">
 </div>
 
     <table>
