--- a/index.html
+++ b/index.html
@@ -78,8 +78,19 @@
       <strong>مبلغ نهایی قابل پرداخت:</strong> <span id="final-total">0</span> تومان
     </div>
 
+     <div class="payment">
+      <strong>لطفاً مبلغ را به یکی از حساب‌های زیر وارید نمایید:</strong><br />
+      <p> هزینه ی ارسال به عهده ی مشتری است </p>
+    </div>
+
+     <div class="payment">
+      <strong>به نام نیما حکیمی نزد بانک ملی د:</strong><br />
+      <p>💳 6037-9973-6870-4665 </p>
+      <p>💳 IR6301700000002232283580071 </p>
+    </div>
+  
     <div class="payment">
-      <strong>لطفاً مبلغ را به نام مهتاب فتاحی واریز نمایید:</strong><br />
+      <strong> به نام مهتاب فتاحی نزد بانک ...:</strong><br />
       <p>💳 5041-7212-0097-2017 </p>
       <p>💳 Ir420700010001110103791001 </p>
     </div>
