--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     </div>
 
      <div class="payment">
-      <strong>لطفاً مبلغ را به یکی از حساب‌های زیر وارید نمایید:</strong><br />
+      <strong>لطفاً مبلغ را به یکی از حساب‌های زیر واریز نمایید:</strong><br />
       <p> هزینه ی ارسال به عهده ی مشتری است </p>
     </div>
 
      <div class="payment">
-      <strong>به نام نیما حکیمی نزد بانک ملی د:</strong><br />
+      <strong>به نام نیما حکیمی نزد بانک ملی :</strong><br />
       <p>💳 6037-9973-6870-4665 </p>
       <p>💳 IR6301700000002232283580071 </p>
     </div>
