--- a/index.html
+++ b/index.html
@@ -24,52 +24,71 @@
 </div>
 
     <table>
-      <thead>
-        <tr>
-          <th>نام محصول</th>
-          <th>قیمت (تومان)</th>
-          <th>تعداد</th>
-          <th>جمع ردیف</th>
-        </tr>
-      </thead>
+    
+<thead>
+  <tr>
+    <th>نام محصول</th>
+    <th>آبی</th>
+    <th>زرد</th>
+    <th>قرمز</th>
+    <th>زرشکی</th>
+    <th>سورمه‌ای</th>
+    <th>جمع ردیف</th>
+  </tr>
+</thead>
+<tbody id="product-table">
+  <tr>
+    <td>ماگ شیار دار</td>
+    <td><input type="number" name="ماگ شیار دار-آبی" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ شیار دار-زرد" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ شیار دار-قرمز" min="0" value="0" onchange="updateTotal()" /></td>
+    <td></td> <!-- رنگی که این مدل ندارد، خالی می‌ماند -->
+    <td></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr>
+    <td>ماگ دسته دار دار</td>
+    <td><input type="number" name="ماگ شیار دار-آبی" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ شیار دار-زرد" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ شیار دار-قرمز" min="0" value="0" onchange="updateTotal()" /></td>
+    <td></td> <!-- رنگی که این مدل ندارد، خالی می‌ماند -->
+    <td></td>
+    <td class="row-total">0</td>
+  </tr>
+
+</tbody>
+
       <tbody id="product-table">
-        <tr>
-          <td>ماگ شیار دار - آبی</td>
-          <td>125000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ شیار دار - زرد</td>
-          <td>125000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ شیار دار - قرمز</td>
-          <td>125000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ لاستر - زرشکی</td>
-          <td>175000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>ماگ لاستر - سورمه‌ای</td>
-          <td>175000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
-          <td class="row-total">0</td>
-        </tr>
-        <tr>
-          <td>فنجان لاستر - سورمه‌ای</td>
-          <td>175000</td>
-          <td><input name="qty" type="number" min="0" value="0" onchange="updateTotal()" /></td>
-          <td class="row-total">0</td>
-        </tr>
-      </tbody>
+  <tr><th colspan="4" style="background:#eee;">ماگ لاستر</th></tr>
+  <tr>
+    <td style="padding-right: 20px;">رنگ زرشکی</td>
+    <td>175000</td>
+    <td><input name="qty" data-product="ماگ لاستر - زرشکی" type="number" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr>
+    <td style="padding-right: 20px;">رنگ سورمه‌ای</td>
+    <td>175000</td>
+    <td><input name="qty" data-product="ماگ لاستر - سورمه‌ای" type="number" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+
+         <tr><th colspan="4" style="background:#eee;">ماگ دسته داد</th></tr>
+  <tr>
+    <td style="padding-right: 20px;">رنگ زرشکی</td>
+    <td>175000</td>
+    <td><input name="qty" data-product="ماگ لاستر - زرشکی" type="number" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr>
+    <td style="padding-right: 20px;">رنگ سورمه‌ای</td>
+    <td>175000</td>
+    <td><input name="qty" data-product="ماگ لاستر - سورمه‌ای" type="number" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+</tbody>
+
+    
     </table>
 
     <div class="summary">
