--- a/index.html
+++ b/index.html
@@ -36,27 +36,42 @@
     <th>جمع ردیف</th>
   </tr>
 </thead>
-<tbody id="product-table">
+<thead>
   <tr>
-    <td>ماگ شیار دار</td>
-    <td><input type="number" name="ماگ شیار دار-آبی" min="0" value="0" onchange="updateTotal()" /></td>
-    <td><input type="number" name="ماگ شیار دار-زرد" min="0" value="0" onchange="updateTotal()" /></td>
-    <td><input type="number" name="ماگ شیار دار-قرمز" min="0" value="0" onchange="updateTotal()" /></td>
-    <td></td> <!-- رنگی که این مدل ندارد، خالی می‌ماند -->
-    <td></td>
-    <td class="row-total">0</td>
+    <th>نام محصول</th>
+    <th>قیمت واحد (تومان)</th>
+    <th>آبی</th>
+    <th>زرد</th>
+    <th>قرمز</th>
+    <th>زرشکی</th>
+    <th>سورمه‌ای</th>
+    <th>جمع ردیف</th>
   </tr>
-  <tr>
-    <td>ماگ دسته دار دار</td>
+</thead>
+<tbody id="product-table">
+  <tr data-price="125000">
+    <td>ماگ شیار دار</td>
+    <td>125000</td>
     <td><input type="number" name="ماگ شیار دار-آبی" min="0" value="0" onchange="updateTotal()" /></td>
     <td><input type="number" name="ماگ شیار دار-زرد" min="0" value="0" onchange="updateTotal()" /></td>
     <td><input type="number" name="ماگ شیار دار-قرمز" min="0" value="0" onchange="updateTotal()" /></td>
-    <td></td> <!-- رنگی که این مدل ندارد، خالی می‌ماند -->
+    <td></td>
     <td></td>
     <td class="row-total">0</td>
   </tr>
 
+  <tr data-price="175000">
+    <td>ماگ لاستر</td>
+    <td>175000</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td><input type="number" name="ماگ لاستر-زرشکی" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ لاستر-سورمه‌ای" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
 </tbody>
+
  </table>
 
     <div class="summary">
